# RichTrade

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml  cmake.yml
matching_engine/: CMakeLists.txt  README.md
matching_engine/src/: main.cpp
matching_engine/src/api/: RestServer.cpp  RestServer.h  WebSocketConfig.h  WebSocketServer.cpp  WebSocketServer.h
matching_engine/src/core/: MatchingEngine.cpp  MatchingEngine.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  Trade.cpp  Trade.h
matching_engine/src/utils/: Logger.cpp  Logger.h  Utils.cpp  Utils.h
matching_engine/tests/: test_main.cpp  test_matching_engine.cpp  test_order.cpp  test_orderbook.cpp
trading_client/: CMakeLists.txt
trading_client/src/: TradingClient.cpp  TradingClient.h  main.cpp
